--- a/gb/20/1/6/n11772093.md
+++ b/gb/20/1/6/n11772093.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/txyzum203/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/txyzum203/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/txyzum203/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>内幕：亡党之音弥漫中共内部</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/1602140930592039-600x400.jpg" />
-<h6>过去的2019年，中共政权陷入前所未有的内外交困乱局。(Getty Images)
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/1602140930592039-600x400.jpg" />
+<h6>过去的2019年，中共政权陷入前所未有的内外交困乱局。（Getty Images）
 </h6>
 <hr>
-<p>【大纪元2020年01月06日讯】（大纪元记者古清儿报导）过去的2019年，<a href="https://github.com/txyzum203/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%94%BF%E6%9D%83.md">中共政权</a>陷入前所未有的内外交困乱局。而中共智囊已经开始发表各类“<a href="https://github.com/txyzum203/djy/blob/master/gb/tag/%E4%BA%A1%E5%85%9A.md">亡党</a>之音”，还有中共高层幕僚向外透露，中共已经进入了<a href="https://github.com/txyzum203/djy/blob/master/gb/tag/%E6%AD%BB%E8%83%A1%E5%90%8C.md">死胡同</a>，随时<a href="https://github.com/txyzum203/djy/blob/master/gb/tag/%E5%9E%AE%E5%8F%B0.md">垮台</a>。</p>
+<p>【大纪元2020年01月06日讯】（大纪元记者古清儿报导）过去的2019年，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%94%BF%E6%9D%83.md#1">中共政权</a>陷入前所未有的内外交困乱局。而中共智囊已经开始发表各类“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BA%A1%E5%85%9A.md#1">亡党</a>之音”，还有中共高层幕僚向外透露，中共已经进入了<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%BB%E8%83%A1%E5%90%8C.md#1">死胡同</a>，随时<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%9E%AE%E5%8F%B0.md#1">垮台</a>。</p>
 <h2>中共学者不否认中共将亡</h2>
 <p>就建政70年，中共是否会跳出“历史周期律”，是否会“人亡政息”这一问题，1月5日，亲共网媒香港01刊发了中共社科院政治学研究所党委书记房宁的专访。</p>
 <p>房宁在采访中并不否认中共将亡，“至于中共能否跳出历史周期律，关键要看实践。”他还表示，目前最高领导人有很强的危机感。</p>
@@ -17,12 +17,12 @@
 <p>除了房宁的文章外，中共官媒去年12月31日刊发了南京大学国际关系研究院院长朱锋的文章，他谈到了中美关系的现况，并暗示中共将在大国竞争中落败。</p>
 <p>朱锋在这篇题为“大变局呼唤有行动力的大战略”的文章中认为，过去400年来的世界历史已清楚说明，大国竞争和冲突的关键时刻，最终获胜的大国常常不是高度的国家主义，而是国家力量、社会活力和个人自由能够有效结合、相互约束、各司其责的国家。</p>
 <p>朱锋的“高度的国家主义”说法，被认为指的是中共。</p>
-<h2><a href="https://github.com/txyzum203/djy/blob/master/gb/tag/%E4%BA%A1%E5%85%9A.md">亡党</a>之音弥漫 中共内部承认正走向解体</h2>
+<h2><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BA%A1%E5%85%9A.md#1">亡党</a>之音弥漫 中共内部承认正走向解体</h2>
 <p>近期，美国的中国问题专家、宾夕法尼亚大学国际关系和中国历史教授林蔚（亚瑟?沃尔德伦，Arthur Waldron）接受了英文大纪元专访，谈到了中共这个体制已经到了解体阶段。</p>
-<p>林蔚透露说，一名和习近平关系密切的中共高层幕僚曾坦率地对他说：“亚瑟，我们到底该怎么办？每个人都知道这个体制已经不起作用了。我们已经进到了‘Si Hu Tong’（<a href="https://github.com/txyzum203/djy/blob/master/gb/tag/%E6%AD%BB%E8%83%A1%E5%90%8C.md">死胡同</a>）……”这个词的意思就是已经沿着一条街道走到了尽头，一个没有出路的街道的尽头。</p>
+<p>林蔚透露说，一名和习近平关系密切的中共高层幕僚曾坦率地对他说：“亚瑟，我们到底该怎么办？每个人都知道这个体制已经不起作用了。我们已经进到了‘Si Hu Tong’（<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%BB%E8%83%A1%E5%90%8C.md#1">死胡同</a>）……”这个词的意思就是已经沿着一条街道走到了尽头，一个没有出路的街道的尽头。</p>
 <p>这名幕僚说：“这是一个死胡同，但是我们不知道下一步该怎么走，因为现在已经到处都是地雷，如果我们再走一步，我们可能就会引发一个可怕的爆炸。”</p>
 <p>林蔚认为，中共正进入一个像前苏联的那个都在谈论解体的时期。这个政权也知道自己在国内的处境十分危险。</p>
-<p>“这并不是说<a href="https://github.com/txyzum203/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%94%BF%E6%9D%83.md">中共政权</a>一旦<a href="https://github.com/txyzum203/djy/blob/master/gb/tag/%E5%9E%AE%E5%8F%B0.md">垮台</a>整个中国就崩溃了。中共垮台之时，国家还会在，房子还会在。只是政体发生了变化。”他说。</p>
+<p>“这并不是说<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%94%BF%E6%9D%83.md#1">中共政权</a>一旦<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%9E%AE%E5%8F%B0.md#1">垮台</a>整个中国就崩溃了。中共垮台之时，国家还会在，房子还会在。只是政体发生了变化。”他说。</p>
 <h2>中共内外交困 党内官员面对中共危机的三种心态</h2>
 <p>如今中共内外交困，美国不断在国际上遏制中共、香港民众抗争持续、中国经济持续下行、中共高层分裂、官员们消极怠工。</p>
 <p>旅美政治与经济学者程晓农去年对美国之音表示，现在官员们面对经济下行的风险大致有三种心态：</p>
@@ -34,38 +34,43 @@
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/6/n11772093.htm">内幕：亡党之音弥漫中共内部</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/27/n11748707.htm">王友群：中共的解体可能快速发生？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11637878.htm">柏林墙倒塌30年 专家：中共暴政亦必亡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/28/n11553159.htm">【新闻看点】没共产党中国崩解？3点揭中共谎言</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/3/17/n8936896.htm">律师分析周强践踏法律背后的中共亡党危机</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/10/24/n4557660.htm">“中共亡党 走向解体”系列报导（完整版）</a></li>
-> <li><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/6/n11704968.md">【思想领袖】中共内部承认正走向解体（二）</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11770899.htm">大陆又一平台爆雷 涉资千亿 近二百万人受害</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11770615.htm">【拍案惊奇】解密：苏莱曼尼之死与美伊战争</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11770883.htm">【翻墙必看】分析：王志民突然被撤职内幕</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11771033.htm">伊拉克国会通过决议要美撤军 川普强硬回应</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11760693.htm">蒋经国一生反共信念的历程</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737632.htm">自伐者无功！三国谋士许攸的教训</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/1/15/n4343055.htm">士为知己者死 古人交友重义胜于生命</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11732934.htm">富翁坐拥万金 为何还受贫穷折磨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11768666.htm">伊朗将军被击毙细节：最后36小时露行踪</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770092.htm">高速收费新系统启动 路费暴涨 民怨四起</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770079.htm">冯仑被退休：退休金8千 广场舞大妈都看不起</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772974.htm">【新闻看点】武汉肺炎蔓延 真正可怕的未排除</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768186.htm">【新闻看点】台湾大选谁赢 北京都遇难题</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768179.htm">【热点互动】台大选关键时刻 反渗透防变色？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770242.htm">在美产子引爱国争议 章子怡发文分享哺乳经验</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770148.htm">范冰冰亮相美食节 遇见人生中两位重要人物</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770031.htm">获悉陈豪刚从武汉返港 李佳芯活动上大惊失色</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767649.htm">第34届金唱片奖 防弹少年团获音源部门大奖</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11769744.htm">BTS成首个包揽金唱片奖音源及唱片大奖歌手</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/27/n11748707.md#1">王友群：中共的解体可能快速发生？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/6/n11637878.md#1">柏林墙倒塌30年 专家：中共暴政亦必亡</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/9/28/n11553159.md#1">【新闻看点】没共产党中国崩解？3点揭中共谎言</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/3/17/n8936896.md#1">律师分析周强践踏法律背后的中共亡党危机</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/15/10/24/n4557660.md#1">“中共亡党 走向解体”系列报导（完整版）</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772093.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/txyzum203/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/txyzum203/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/txyzum203/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/6/n11704968.md#1">【思想领袖】中共内部承认正走向解体（二）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559430.md#1" target="_blank">林辉： 中共70年来的成功与未遂政变</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md#1" target="_blank">出版24年 42种语言 拥有全球读者的转法轮</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/6/n11772093.htm">内幕：亡党之音弥漫中共内部</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/6/n11772093.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
